header css setting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="container clearfix">
+            <div id="logo">
+                <a href="#">
+                    <img src="/image/logo_w(null).svg" alt=""></a>
 
+            </div>
+            <div id="nav">
+                <img src="http://dummyimage.com/21x24/eee/ddd/" alt="">
+                <ul class="menu clearfix">
+                    <li><a href="#">特色</a></li>
+                    <li><a href="#">主廚</a></li>
+                    <li><a href="#">地圖</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
