--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
 
         </div>
     </div>
+    <div class="banner">
+        <div class="container">
+            <div class="sloganbg">
+                <h1 class="slogan-title">咬一口<br>就無法忘懷的漢堡</h1>
+
+                <div class="slogan-subtitle">
+                    <p>七夕絕對無法錯過的好滋味</p>
+                    <i class="fas fa-utensils"></i>
+                    <p>六角大漢堡</p>
+                    <i class="fas fa-utensils"></i>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 
 </body>
 
