--- a/index.html
+++ b/index.html
@@ -92,21 +92,14 @@
             <div class="container">
                 <h1 class="title-cn">今日主廚：帕金森、梅在帕</h1>
                 <h1 class="title-en">Tody Chef: Plum in Shock.</h1>
-                <!--  <div class="cherf-intro">
 
-                    <p>Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque
-                        orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. Mauris molestie sit amet metus mattis varius. Donec sit amet ligula eget nisi sodales egestas. Aliquam
-                        interdum dolor aliquet dolor sollicitudin fermentum. Donec congue lorem a molestie bibendum.</p>
-
-
-                </div>-->
+                <p class="cherf-intro">Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque
+                    orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. Mauris molestie sit amet metus mattis varius. Donec sit amet ligula eget nisi sodales egestas. Aliquam interdum
+                    dolor aliquet dolor sollicitudin fermentum. Donec congue lorem a molestie bibendum.</p>
             </div>
 
 
-
         </div>
-
-
 
 
 
