recommend content css setting

--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@
 
 
     </div>
+    <div class="recommend">
+        <div class="container clearfix">
+            <h3 class="recommend-title">聽聽別人的感想</h1>
+                <div class="recommend-colum">
+                    <img src="image/avatar_1.png" alt="">
+                    <h2 class="subtitle">高雄一口吃</h2>
+                    <p class="message">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                    <p class="commit-name">-- 產品經理</p>
+                </div>
+                <div class="recommend-colum">
+                    <img src="image/avatar_2.png" alt="">
+                    <h2 class="subtitle">廟口小霸王</h2>
+                    <p class="message">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                    <p class="commit-name">-- 金身道士</p>
+                </div>
+                <div class="recommend-colum">
+                    <img src="image/avatar_3.png" alt="">
+                    <h2 class="subtitle">春天也來了</h2>
+                    <p class="message">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                    <p class="commit-name">-- 美麗萬分</p>
+                </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
