map position content css setting compilte

--- a/index.html
+++ b/index.html
@@ -129,6 +129,36 @@
 
         </div>
     </div>
+    <div class="map-position">
+        <div class="container clearfix">
+            <h3 class="map-title">我們的位置不太夠坐<br>要不要先定位呢？</h3>
+            <div class="map">
+            </div>
+            <form action="" class="form-table clearfix">
+                <label for="">姓名</label>
+                <input type="text">
+                <label for="">電話</label>
+                <input type="text">
+                <label for="">信箱</label>
+                <input type="text">
+                <label for="">人數</label>
+                <input type="text">
+                <label for="" class="food-title">是否需要素食</label>
+                <div class="food-check-radio clearfix">
+                    <label class="food" for="food-check-yes">是</label>
+                    <input type="radio" id="food-check-yes" name="check">
+                    <label class="food" for="food-check-no">否</label>
+                    <input type="radio" id="food-check-no" name="check">
+                </div>
+                <div class="btn-area">
+                    <input type="reset" class="reset-btn" value="取消">
+                    <input type="submit" class="send-btn" value="送出">
+                </div>
+            </form>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
