fix footer content css

--- a/index.html
+++ b/index.html
@@ -158,6 +158,38 @@
         </div>
 
     </div>
+    <div class="footer">
+        <div class="container clearfix">
+            <div class="intro-restaurant">
+                <h3 class="about">關於 六角西餐廳</h3>
+                <p>Curabitur lobortis id lorem id bibndum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. </p>
+            </div>
+            <div class="countus  clearfix">
+                <h3 class="title">聯絡方式</h3>
+                <ul>
+                    <li>高雄市中正五路到底</li>
+                    <li>+886 886 886</li>
+                    <li>service@hexschool.com</li>
+                </ul>
+
+            </div>
+            <div class="name1 clearfix">
+                <img src="image/logo_l(null).svg" alt="">
+            </div>
+
+            <div class="social-media clearfix">
+                <ul class="clearfix">
+                    <li><a href="#"><i class="fab fa-google-plus-square"></a></i>
+                    </li>
+                    <li><a href="#"><i class="fab fa-twitter-square"></a></i>
+                    </li>
+                    <li><a href="#"><i class="fab fa-facebook-square"></a></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
