修正 order頁面架構及css

--- a/order.html
+++ b/order.html
@@ -47,24 +47,27 @@
         </div>
     </div>
     <div class="content clearfix">
-        <h2 class="order-title"><i></i>線上訂購美食</h2>
-        <ul class="category">
-            <li><a href="#">全部(23)</a></li>
-            <li><a href="#">只愛吃薯條(118)</a></li>
-            <li><a href="#">加熱就可食(1)</a></li>
-            <li><a href="#">不敗漢堡系列(4)</a></li>
-        </ul>
-        <input type="text"><i class="fa fa-search" aria-hidden="true"></i>
-        <span>結帳去</span><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        <span class="num">2</span>
-        <i class="heart"></i>
-        <div class="line"></div>
-        <div class="meal">
-            <div class="container">
-                <h1 class="meal-title-cn"></h1>
-                <hr>
-                <div class="price"></div>
-                <a href="" class="buy"></a>
+        <div class="container">
+            <h2 class="order-title"><i></i>線上訂購美食</h2>
+            <ul class="category">
+                <li><a href="#">全部(23)</a></li>
+                <li><a href="#">只愛吃薯條(118)</a></li>
+                <li><a href="#">加熱就可食(1)</a></li>
+                <li><a href="#">不敗漢堡系列(4)</a></li>
+            </ul>
+            <input type="text"><i class="fa fa-search" aria-hidden="true"></i>
+            <span>結帳去</span><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            <span class="num">2</span>
+            <i class="heart"></i>
+            <div class="line"></div>
+            <div class="meal">
+                <div class="container">
+                    <h1 class="meal-title-cn"></h1>
+                    <hr>
+                    <div class="price"></div>
+                    <a href="" class="buy"></a>
+                </div>
+
             </div>
 
         </div>
