--- a/order.html
+++ b/order.html
@@ -55,9 +55,18 @@
                 <li><a href="#">加熱就可食(1)</a></li>
                 <li><a href="#">不敗漢堡系列(4)</a></li>
             </ul>
-            <input type="text"><i class="fa fa-search" aria-hidden="true"></i>
-            <span>結帳去</span><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-            <span class="num">2</span>
+            <div class="searcharea">
+                <input type="text">
+                <button class="search"><i class="fas fa-search"></i></button>
+            </div>
+            <div class="checkout-area">
+                <span class="checkout"><a href="">結帳去</a></span>
+                <i class="fas fa-shopping-cart fa-2x" aria-hidden="true">
+                <span class="num">5</span>
+            </i>
+            </div>
+
+
             <i class="heart"></i>
             <div class="line"></div>
             <div class="meal">
