order頁面content meal清單css設定

--- a/order.html
+++ b/order.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="content clearfix">
-        <div class="container">
+        <div class="container clearfix">
             <h2 class="order-title"><i></i>線上訂購美食</h2>
             <ul class="category">
                 <li><a href="#">全部(23)</a></li>
@@ -55,32 +55,41 @@
                 <li><a href="#">加熱就可食(1)</a></li>
                 <li><a href="#">不敗漢堡系列(4)</a></li>
             </ul>
-            <div class="searcharea">
+            <div class="searcharea clearfix">
                 <input type="text">
                 <button class="search"><i class="fas fa-search"></i></button>
             </div>
-            <div class="checkout-area">
-                <span class="checkout"><a href="">結帳去</a></span>
-                <i class="fas fa-shopping-cart fa-2x" aria-hidden="true">
-                <span class="num">5</span>
-            </i>
+            <div class="checkout-area clearfix">
+                <div class="buy-area">
+                    <span class="checkout"><a href="">結帳去</a></span>
+                    <i class="fas fa-shopping-cart fa-2x" aria-hidden="true">
+                        <span class="num">5</span>
+                    </i>
+                </div>
+
             </div>
 
-
-            <i class="heart"></i>
-            <div class="line"></div>
             <div class="meal">
-                <div class="container">
-                    <h1 class="meal-title-cn"></h1>
-                    <hr>
-                    <div class="price"></div>
-                    <a href="" class="buy"></a>
+                <i class=" far fa-heart fa-2x"></i>
+
+                <img class="meal-img" src="image/product_1.png" alt="">
+                <div class="line"></div>
+                <div class="meal-list">
+                    <h1 class="meal-title-cn">經典漢堡套餐</h1>
+                    <h2 class="meal-title-cn">Classic Hamburger Package</h2>
+                    <hr class="center-line">
+                    <div class="price">$120</div>
+                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                 </div>
 
             </div>
 
         </div>
-        <div class="meal">
+
+
+
+    </div>
+    <!-- <div class="meal">
             <div class="container">
                 <h1 class="meal-title-cn"></h1>
                 <hr>
@@ -106,7 +115,7 @@
                 <a href="" class="buy"></a>
             </div>
 
-        </div>
+        </div> -->
 
 
 
