--- a/order.html
+++ b/order.html
@@ -48,6 +48,7 @@
     </div>
     <div class="content clearfix">
         <div class="container clearfix">
+
             <h2 class="order-title"><i></i>線上訂購美食</h2>
             <ul class="category">
                 <li><a href="#">全部(23)</a></li>
@@ -63,17 +64,17 @@
                 <div class="buy-area">
                     <span class="checkout"><a href="">結帳去</a></span>
                     <i class="fas fa-shopping-cart fa-2x" aria-hidden="true">
-                        <span class="num">5</span>
-                    </i>
+                            <span class="num">5</span>
+                        </i>
                 </div>
 
             </div>
-
+            <!-- <div class="list-area"> -->
             <div class="meal">
                 <i class=" far fa-heart fa-2x"></i>
 
                 <img class="meal-img" src="image/product_1.png" alt="">
-                <div class="line"><span>熱銷美食</span></div>
+                <div class="line">熱銷美食1</div>
                 <div class="top"></div>
                 <div class="meal-list">
                     <h1 class="meal-title-cn">經典漢堡套餐</h1>
@@ -132,8 +133,12 @@
         </div>
 
 
+        <!-- </div> -->
+
+
 
     </div>
+
 
 
     <div class="footer">
