修正meal css 包含rwd設定＂

--- a/order.html
+++ b/order.html
@@ -48,123 +48,119 @@
     </div>
     <div class="content clearfix">
         <div class="container clearfix">
-
-            <!-- <h2 class="order-title"><i></i>線上訂購美食</h2>
-            <ul class="category">
-                <li><a href="#">全部(23)</a></li>
-                <li><a href="#">只愛吃薯條(118)</a></li>
-                <li><a href="#">加熱就可食(1)</a></li>
-                <li><a href="#">不敗漢堡系列(4)</a></li>
-            </ul>
+            <div class="meal-category">
+                <h2 class="order-title"><i></i>線上訂購美食</h2>
+                <ul class="category">
+                    <li><a href="#">全部(23)</a></li>
+                    <li><a href="#">只愛吃薯條(118)</a></li>
+                    <li><a href="#">加熱就可食(1)</a></li>
+                    <li><a href="#">不敗漢堡系列(4)</a></li>
+                </ul>
+            </div>
             <div class="searcharea clearfix">
-                <input type="text">
-                <button class="search"><i class="fas fa-search"></i></button>
-            </div>
-            <div class="checkout-area clearfix">
-                <div class="buy-area">
-                    <span class="checkout"><a href="">結帳去</a></span>
-                    <i class="fas fa-shopping-cart fa-2x" aria-hidden="true">
-                            <span class="num">5</span>
-                        </i>
+                <div class="out-area">
+                    <input type="text">
+                    <button class="search"><i class="fas fa-search"></i></button>
                 </div>
 
-            </div> -->
-            <!-- <div class="list-area"> -->
-            <div class="meal">
-                <i class=" far fa-heart fa-2x"></i>
+                <div class="buy-area clearfix">
+                    <div class="function">
+                        <span class="checkout"><a href="">結帳去</a></span>
+                        <i class="fas fa-shopping-cart fa-2x" aria-hidden="true">
+                                    <span class="num">5</span>
+                                </i>
+                    </div>
 
-                <img class="meal-img" src="image/product_1.png" alt="">
-                <div class="line">熱銷美食1</div>
-                <div class="top"></div>
-                <div class="meal-list">
-                    <h1 class="meal-title-cn">經典漢堡套餐</h1>
-                    <h2 class="meal-title-cn">Classic Hamburger Package</h2>
-                    <hr class="center-line">
-                    <div class="price">$120</div>
-                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                 </div>
 
-            </div>
-            <div class="meal">
-                <i class=" far fa-heart fa-2x"></i>
 
-                <img class="meal-img" src="image/product_2.png" alt="">
-                <div class="line"></div>
-                <div class="top"></div>
-                <div class="meal-list">
-                    <h1 class="meal-title-cn">英俊香腸</h1>
-                    <h2 class="meal-title-cn">Handsome Sausage</h2>
-                    <hr class="center-line">
-                    <div class="price">$1024</div>
-                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+
+
+
+
+                <!-- <div class="list-area"> -->
+                <div class="meal">
+                    <i class=" far fa-heart fa-2x"></i>
+
+                    <img class="meal-img" src="image/product_1.png" alt="">
+                    <!--<div class="line">熱銷美食1</div>
+            <div class="top"></div>-->
+                    <div class="meal-list">
+                        <h1 class="meal-title-cn">經典漢堡套餐</h1>
+                        <h2 class="meal-title-cn">Classic Hamburger Package</h2>
+                        <hr class="center-line">
+                        <div class="price">$120</div>
+                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                    </div>
+
                 </div>
+                <div class="meal">
+                    <i class=" far fa-heart fa-2x"></i>
 
-            </div>
-            <!--1111-->
-            <div class="meal">
-                <i class=" far fa-heart fa-2x"></i>
+                    <img class="meal-img" src="image/product_2.png" alt="">
+                    <div class="line"></div>
+                    <div class="top"></div>
+                    <div class="meal-list">
+                        <h1 class="meal-title-cn">英俊香腸</h1>
+                        <h2 class="meal-title-cn">Handsome Sausage</h2>
+                        <hr class="center-line">
+                        <div class="price">$1024</div>
+                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                    </div>
 
-                <img class="meal-img" src="image/product_1.png" alt="">
-                <div class="line">熱銷美食1</div>
-                <div class="top"></div>
-                <div class="meal-list">
-                    <h1 class="meal-title-cn">經典漢堡套餐</h1>
-                    <h2 class="meal-title-cn">Classic Hamburger Package</h2>
-                    <hr class="center-line">
-                    <div class="price">$120</div>
-                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                 </div>
+                <!--  -->
+                <!--1111-->
+                <!-- <div class="meal">
+            <i class=" far fa-heart fa-2x"></i>
 
+            <img class="meal-img" src="image/product_2.png" alt="">
+            <div class="line"></div>
+            <div class="top"></div>
+            <div class="meal-list">
+                <h1 class="meal-title-cn">英俊香腸</h1>
+                <h2 class="meal-title-cn">Handsome Sausage</h2>
+                <hr class="center-line">
+                <div class="price">$1024</div>
+                <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
             </div>
-            <div class="meal">
-                <i class=" far fa-heart fa-2x"></i>
 
-                <img class="meal-img" src="image/product_2.png" alt="">
-                <div class="line"></div>
-                <div class="top"></div>
-                <div class="meal-list">
-                    <h1 class="meal-title-cn">英俊香腸</h1>
-                    <h2 class="meal-title-cn">Handsome Sausage</h2>
-                    <hr class="center-line">
-                    <div class="price">$1024</div>
-                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+        </div> -->
+                <div class="meal">
+                    <i class=" far fa-heart fa-2x"></i>
+
+                    <img class="meal-img" src="image/product_3.png" alt="">
+                    <div class="line"></div>
+                    <div class="top"></div>
+                    <div class="meal-list">
+                        <h1 class="meal-title-cn">漢堡兄弟</h1>
+                        <h2 class="meal-title-cn">Hamburg Brothers</h2>
+                        <hr class="center-line">
+                        <div class="price">$792</div>
+                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                    </div>
+
                 </div>
+                <div class="meal">
+                    <i class=" far fa-heart fa-2x"></i>
 
-            </div>
-            <div class="meal">
-                <i class=" far fa-heart fa-2x"></i>
+                    <img class="meal-img" src="image/product_4.png" alt="">
+                    <div class="line"></div>
+                    <div class="top"></div>
+                    <div class="meal-list">
+                        <h1 class="meal-title-cn">完美願望</h1>
+                        <h2 class="meal-title-cn">Dragon Ball Package</h2>
+                        <hr class="center-line">
+                        <div class="price">$999,999</div>
+                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                    </div>
 
-                <img class="meal-img" src="image/product_3.png" alt="">
-                <div class="line"></div>
-                <div class="top"></div>
-                <div class="meal-list">
-                    <h1 class="meal-title-cn">漢堡兄弟</h1>
-                    <h2 class="meal-title-cn">Hamburg Brothers</h2>
-                    <hr class="center-line">
-                    <div class="price">$792</div>
-                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                 </div>
-
             </div>
-            <div class="meal">
-                <i class=" far fa-heart fa-2x"></i>
+            <!-- </div> -->
 
-                <img class="meal-img" src="image/product_4.png" alt="">
-                <div class="line"></div>
-                <div class="top"></div>
-                <div class="meal-list">
-                    <h1 class="meal-title-cn">完美願望</h1>
-                    <h2 class="meal-title-cn">Dragon Ball Package</h2>
-                    <hr class="center-line">
-                    <div class="price">$999,999</div>
-                    <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
-                </div>
 
-            </div>
         </div>
-
-
-        <!-- </div> -->
 
 
 
