--- a/order.html
+++ b/order.html
@@ -87,7 +87,7 @@
             <div class="top"></div>-->
                     <div class="meal-list">
                         <h1 class="meal-title-cn">經典漢堡套餐</h1>
-                        <h2 class="meal-title-cn">Classic Hamburger Package</h2>
+                        <h2 class="meal-title-en">Classic Hamburger Package</h2>
                         <hr class="center-line">
                         <div class="price">$120</div>
                         <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
@@ -102,7 +102,7 @@
                     <div class="top"></div>
                     <div class="meal-list">
                         <h1 class="meal-title-cn">英俊香腸</h1>
-                        <h2 class="meal-title-cn">Handsome Sausage</h2>
+                        <h2 class="meal-title-en">Handsome Sausage</h2>
                         <hr class="center-line">
                         <div class="price">$1024</div>
                         <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
@@ -134,7 +134,7 @@
                     <div class="top"></div>
                     <div class="meal-list">
                         <h1 class="meal-title-cn">漢堡兄弟</h1>
-                        <h2 class="meal-title-cn">Hamburg Brothers</h2>
+                        <h2 class="meal-title-en">Hamburg Brothers</h2>
                         <hr class="center-line">
                         <div class="price">$792</div>
                         <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
@@ -149,7 +149,7 @@
                     <div class="top"></div>
                     <div class="meal-list">
                         <h1 class="meal-title-cn">完美願望</h1>
-                        <h2 class="meal-title-cn">Dragon Ball Package</h2>
+                        <h2 class="meal-title-en">Dragon Ball Package</h2>
                         <hr class="center-line">
                         <div class="price">$999,999</div>
                         <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
