--- a/index.html
+++ b/index.html
@@ -48,38 +48,38 @@
     </div>
     <div class="content clearfix">
 
-        <!-- <div class="container "> -->
-        <div class="outer">
-            <h2 class="feature-title">
-                客人總是在詢問<br>這麼好吃的秘訣是什麼
-            </h2>
-        </div>
+        <div class="container ">
+            <div class="outer">
+                <h2 class="feature-title">
+                    客人總是在詢問<br>這麼好吃的秘訣是什麼
+                </h2>
+            </div>
 
-        <!-- <h2 class="feature-title"></h2> -->
-        <!-- <div class="features clearfix">-->
-        <!-- <div class="horizontal-line">
+            <!-- <h2 class="feature-title"></h2> -->
+            <!-- <div class="features clearfix">-->
+            <!-- <div class="horizontal-line">
             </div> -->
-        <!-- <div class="t">
+            <!-- <div class="t">
                 <hr>
             </div> -->
 
-        <div class="intro">
-            <img src="image/feature_1.png" alt="" class="features-img">
-            <h3 class="intro-title">台灣本土蔬菜</h3>
-            <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
-        </div>
-        <div class="intro">
-            <img src="image/feature_2.png" alt="" class="features-img">
-            <h3 class="intro-title">專業米其林廚師</h3>
-            <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
-        </div>
-        <div class="intro">
-            <img src="image/feature_3.png" alt="" class="features-img">
-            <h3 class="intro-title">對於專業不能退讓</h3>
-            <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
-        </div>
+            <div class="intro">
+                <img src="image/feature_1.png" alt="" class="features-img">
+                <h3 class="intro-title">台灣本土蔬菜</h3>
+                <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
+            </div>
+            <div class="intro">
+                <img src="image/feature_2.png" alt="" class="features-img">
+                <h3 class="intro-title">專業米其林廚師</h3>
+                <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
+            </div>
+            <div class="intro">
+                <img src="image/feature_3.png" alt="" class="features-img">
+                <h3 class="intro-title">對於專業不能退讓</h3>
+                <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
+            </div>
 
-        <!-- </div> -->
+        </div>
 
 
 
