新增hr水平線及緞帶css設定

--- a/order.html
+++ b/order.html
@@ -83,8 +83,8 @@
                     <i class=" far fa-heart fa-2x"></i>
 
                     <img class="meal-img" src="image/product_1.png" alt="">
-                    <!--<div class="line">熱銷美食1</div>
-            <div class="top"></div>-->
+                    <div class="ribbon"><span>熱銷美食</span></div>
+                    <!-- <div class="top"></div> -->
                     <div class="meal-list">
                         <h1 class="meal-title-cn">經典漢堡套餐</h1>
                         <h2 class="meal-title-en">Classic Hamburger Package</h2>
@@ -98,8 +98,6 @@
                     <i class=" far fa-heart fa-2x"></i>
 
                     <img class="meal-img" src="image/product_2.png" alt="">
-                    <div class="line"></div>
-                    <div class="top"></div>
                     <div class="meal-list">
                         <h1 class="meal-title-cn">英俊香腸</h1>
                         <h2 class="meal-title-en">Handsome Sausage</h2>
@@ -130,8 +128,6 @@
                     <i class=" far fa-heart fa-2x"></i>
 
                     <img class="meal-img" src="image/product_3.png" alt="">
-                    <div class="line"></div>
-                    <div class="top"></div>
                     <div class="meal-list">
                         <h1 class="meal-title-cn">漢堡兄弟</h1>
                         <h2 class="meal-title-en">Hamburg Brothers</h2>
@@ -142,11 +138,9 @@
 
                 </div>
                 <div class="meal">
-                    <i class=" far fa-heart fa-2x"></i>
+                    <i class="fas fa-heart fa-2x"></i>
 
                     <img class="meal-img" src="image/product_4.png" alt="">
-                    <div class="line"></div>
-                    <div class="top"></div>
                     <div class="meal-list">
                         <h1 class="meal-title-cn">完美願望</h1>
                         <h2 class="meal-title-en">Dragon Ball Package</h2>
