--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/web.js"></script>
     <title>六角西餐廳</title>
 </head>
 
@@ -20,7 +22,7 @@
 
             </div>
             <div id="nav">
-                <img src="http://dummyimage.com/21x24/eee/ddd/" alt="">
+                <a class="showmenu" href="">show</a>
                 <ul class="menu clearfix">
                     <li><a href="#">特色</a></li>
                     <li><a href="#">主廚</a></li>
