調整rwd選單及PC選單CSS設定

--- a/index.html
+++ b/index.html
@@ -22,63 +22,71 @@
 
             </div>
             <div id="nav">
-                <a class="showmenu" href="">show</a>
+                <a class="showmenu">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <!-- <a class="" href="">show</a> -->
                 <ul class="menu clearfix">
                     <li><a href="#">特色</a></li>
                     <li><a href="#">主廚</a></li>
                     <li><a href="#">地圖</a></li>
+                    <li>
+                        <a href="order.html">線上訂餐</a></li>
+                    <li><a href="login.html">會員登入</a></li>
                 </ul>
             </div>
 
         </div>
     </div>
-    <div class="banner">
-        <div class="container">
-            <div class="sloganbg">
-                <h1 class="slogan-title">咬一口<br>就無法忘懷的漢堡</h1>
+    <div class="banner ">
+        <div class="container ">
+            <div class="sloganbg ">
+                <h1 class="slogan-title ">咬一口<br>就無法忘懷的漢堡</h1>
 
-                <div class="slogan-subtitle">
+                <div class="slogan-subtitle ">
                     <p>七夕絕對無法錯過的好滋味</p>
-                    <i class="fas fa-utensils"></i>
+                    <i class="fas fa-utensils "></i>
                     <p>六角大漢堡</p>
-                    <i class="fas fa-utensils"></i>
+                    <i class="fas fa-utensils "></i>
                 </div>
             </div>
 
 
         </div>
     </div>
-    <div class="content clearfix">
+    <div class="content clearfix ">
 
         <div class="container ">
-            <div class="outer">
-                <h2 class="feature-title">
+            <div class="outer ">
+                <h2 class="feature-title ">
                     客人總是在詢問<br>這麼好吃的秘訣是什麼
                 </h2>
                 <hr>
             </div>
 
-            <!-- <h2 class="feature-title"></h2> -->
-            <!-- <div class="features clearfix">-->
-            <!-- <div class="horizontal-line">
+            <!-- <h2 class="feature-title "></h2> -->
+            <!-- <div class="features clearfix ">-->
+            <!-- <div class="horizontal-line ">
             </div> -->
-            <!-- <div class="t">
+            <!-- <div class="t ">
                 <hr>
             </div> -->
 
-            <div class="intro">
-                <img src="image/feature_1.png" alt="" class="features-img">
-                <h3 class="intro-title">台灣本土蔬菜</h3>
+            <div class="intro ">
+                <img src="image/feature_1.png " alt=" " class="features-img ">
+                <h3 class="intro-title ">台灣本土蔬菜</h3>
                 <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
             </div>
-            <div class="intro">
-                <img src="image/feature_2.png" alt="" class="features-img">
-                <h3 class="intro-title">專業米其林廚師</h3>
+            <div class="intro ">
+                <img src="image/feature_2.png " alt=" " class="features-img ">
+                <h3 class="intro-title ">專業米其林廚師</h3>
                 <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
             </div>
-            <div class="intro">
-                <img src="image/feature_3.png" alt="" class="features-img">
-                <h3 class="intro-title">對於專業不能退讓</h3>
+            <div class="intro ">
+                <img src="image/feature_3.png " alt=" " class="features-img ">
+                <h3 class="intro-title ">對於專業不能退讓</h3>
                 <p>In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
             </div>
 
@@ -89,14 +97,14 @@
 
 
     </div>
-    <div class="chief-feature clearfix">
-        <div class="chief-feature-img"></div>
-        <div class="name">
-            <div class="container">
-                <h1 class="title-cn">今日主廚：帕金森、梅在帕</h1>
-                <h1 class="title-en">Tody Chef: Plum in Shock.</h1>
+    <div class="chief-feature clearfix ">
+        <div class="chief-feature-img "></div>
+        <div class="name ">
+            <div class="container ">
+                <h1 class="title-cn ">今日主廚：帕金森、梅在帕</h1>
+                <h1 class="title-en ">Tody Chef: Plum in Shock.</h1>
 
-                <p class="cherf-intro">Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque
+                <p class="cherf-intro ">Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque
                     orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. Mauris molestie sit amet metus mattis varius. Donec sit amet ligula eget nisi sodales egestas. Aliquam interdum
                     dolor aliquet dolor sollicitudin fermentum. Donec congue lorem a molestie bibendum.</p>
             </div>
@@ -108,67 +116,67 @@
 
 
     </div>
-    <div class="recommend">
-        <div class="container clearfix">
-            <h3 class="recommend-title">聽聽別人的感想</h1>
-                <div class="recommend-colum">
-                    <img src="image/avatar_1.png" alt="">
-                    <h2 class="subtitle">高雄一口吃</h2>
-                    <p class="message">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
-                    <p class="commit-name">-- 產品經理</p>
+    <div class="recommend ">
+        <div class="container clearfix ">
+            <h3 class="recommend-title ">聽聽別人的感想</h1>
+                <div class="recommend-colum ">
+                    <img src="image/avatar_1.png " alt=" ">
+                    <h2 class="subtitle ">高雄一口吃</h2>
+                    <p class="message ">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                    <p class="commit-name ">-- 產品經理</p>
                 </div>
-                <div class="recommend-colum">
-                    <img src="image/avatar_2.png" alt="">
-                    <h2 class="subtitle">廟口小霸王</h2>
-                    <p class="message">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
-                    <p class="commit-name">-- 金身道士</p>
+                <div class="recommend-colum ">
+                    <img src="image/avatar_2.png " alt=" ">
+                    <h2 class="subtitle ">廟口小霸王</h2>
+                    <p class="message ">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                    <p class="commit-name ">-- 金身道士</p>
                 </div>
-                <div class="recommend-colum">
-                    <img src="image/avatar_3.png" alt="">
-                    <h2 class="subtitle">春天也來了</h2>
-                    <p class="message">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
-                    <p class="commit-name">-- 美麗萬分</p>
+                <div class="recommend-colum ">
+                    <img src="image/avatar_3.png " alt=" ">
+                    <h2 class="subtitle ">春天也來了</h2>
+                    <p class="message ">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                    <p class="commit-name ">-- 美麗萬分</p>
                 </div>
 
         </div>
     </div>
-    <div class="map-position">
-        <div class="container clearfix">
-            <h3 class="map-title">我們的位置不太夠坐<br>要不要先定位呢？</h3>
-            <div class="map">
+    <div class="map-position ">
+        <div class="container clearfix ">
+            <h3 class="map-title ">我們的位置不太夠坐<br>要不要先定位呢？</h3>
+            <div class="map ">
             </div>
-            <form action="" class="form-table clearfix">
-                <label for="">姓名</label>
-                <input type="text">
-                <label for="">電話</label>
-                <input type="text">
-                <label for="">信箱</label>
-                <input type="text">
-                <label for="">人數</label>
-                <input type="text">
-                <label for="" class="food-title">是否需要素食</label>
-                <div class="food-check-radio clearfix">
-                    <label class="food" for="food-check-yes">是</label>
-                    <input type="radio" id="food-check-yes" name="check">
-                    <label class="food" for="food-check-no">否</label>
-                    <input type="radio" id="food-check-no" name="check">
+            <form action=" " class="form-table clearfix ">
+                <label for=" ">姓名</label>
+                <input type="text ">
+                <label for=" ">電話</label>
+                <input type="text ">
+                <label for=" ">信箱</label>
+                <input type="text ">
+                <label for=" ">人數</label>
+                <input type="text ">
+                <label for=" " class="food-title ">是否需要素食</label>
+                <div class="food-check-radio clearfix ">
+                    <label class="food " for="food-check-yes ">是</label>
+                    <input type="radio " id="food-check-yes " name="check ">
+                    <label class="food " for="food-check-no ">否</label>
+                    <input type="radio " id="food-check-no " name="check ">
                 </div>
-                <div class="btn-area">
-                    <input type="reset" class="reset-btn" value="取消">
-                    <input type="submit" class="send-btn" value="送出">
+                <div class="btn-area ">
+                    <input type="reset " class="reset-btn " value="取消 ">
+                    <input type="submit " class="send-btn " value="送出 ">
                 </div>
             </form>
         </div>
 
     </div>
-    <div class="footer">
-        <div class="container clearfix">
-            <div class="intro-restaurant">
-                <h3 class="about">關於 六角西餐廳</h3>
+    <div class="footer ">
+        <div class="container clearfix ">
+            <div class="intro-restaurant ">
+                <h3 class="about ">關於 六角西餐廳</h3>
                 <p>Curabitur lobortis id lorem id bibndum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. </p>
             </div>
-            <div class="countus  clearfix">
-                <h3 class="title">聯絡方式</h3>
+            <div class="countus clearfix ">
+                <h3 class="title ">聯絡方式</h3>
                 <ul>
                     <li>高雄市中正五路到底</li>
                     <li>+886 886 886</li>
@@ -176,17 +184,17 @@
                 </ul>
 
             </div>
-            <div class="name1 clearfix">
-                <img src="image/logo_l(null).svg" alt="">
+            <div class="name1 clearfix ">
+                <img src="image/logo_l(null).svg " alt=" ">
             </div>
 
-            <div class="social-media clearfix">
-                <ul class="clearfix">
-                    <li><a href="#"><i class="fab fa-google-plus-square"></a></i>
+            <div class="social-media clearfix ">
+                <ul class="clearfix ">
+                    <li><a href="# "><i class="fab fa-google-plus-square "></a></i>
                     </li>
-                    <li><a href="#"><i class="fab fa-twitter-square"></a></i>
+                    <li><a href="# "><i class="fab fa-twitter-square "></a></i>
                     </li>
-                    <li><a href="#"><i class="fab fa-facebook-square"></a></i>
+                    <li><a href="# "><i class="fab fa-facebook-square "></a></i>
                     </li>
                 </ul>
             </div>
