修正錯誤與CSS設定

--- a/login.html
+++ b/login.html
@@ -55,11 +55,11 @@
                 <div class="container">
                     <h3 class="login">LOGIN</h3>
                     <label for="">Email Address*</label>
-                    <label class="user">
+                    <label class="user-login">
                         <input type="text">
                     </label>
                     <label for="">Password*</label>
-                    <label class="passwd">
+                    <label class="passwd-login">
                       <input type="text">  
                     </label>
                     <a href="#">忘記密碼？</a>
